Fixed dynamic fullscreen displaying on mobile

--- a/src/components/main/main.less
+++ b/src/components/main/main.less
@@ -1,7 +1,7 @@
 .main {
 	display: flex;
 	flex-direction: column;
-	height: 100%;
+	min-height: 100%;
 	padding: 2vh 3vw 4vh 3vw;
 
 	>div {
