--- a/src/styles.less
+++ b/src/styles.less
@@ -14,7 +14,8 @@ body {
 
 .wrapper {
 	width: 100%;
-	height: 100vh;
+	min-height: 100dvh;
+
 	background-size: cover;
 	background-position: center;
 
